# azure-devops-rust-lib

./: Cargo.toml  LICENSE  README.md
app1/: Cargo.toml
app1/src/: main.rs
docs/: azure_devops_api.md
src/: data_loader.rs  extract_data.rs  lib.rs  paths.rs  resources.rs
src/data_loader/: git.rs  processes.rs  projects.rs  wit.rs
src/extract_data/: projects.rs  wit.rs
src/models/: config.rs
src/paths/: git.rs  processes.rs  projects.rs  wit.rs
src/resources/: git.rs  processes.rs  projects.rs  wit.rs
src/util/: request.rs
