[package]
name = "azure-devops-rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = { version =  "1.35.1", features = ["full"] }
